2007-10-18  Matthieu Nottale  <nottale@gostai.com>

	Fix disconnection detection in liburbi.
	* uclient.cc: Block SIGPIPE, include the socket FD in the error
	 FD_SET in select, treat a return value of 0 from recv as an error
	 (nominal disconnection).
	* uconversion.cc: Replace an int by a long to fix a warning on amd64.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	merge -r 478:514 https://svn.gostai.com/svn/liburbi-cpp/branches/1.0

	2007-10-01  Guillaume Deslandes  <deslandes@gostai.com>
	Add back_cast for boolean
	* src/liburbi/uobject/urbi/uobject.hh.template: Here.

	2007-10-01  Guillaume Deslandes  <deslandes@gostai.com>
	Add missing prototypes for UNotify*
	* src/liburbi/uobject/urbi/uobject.hh.template: Here.

	2007-09-28  Guillaume Deslandes  <deslandes@gostai.com>
	Reactivate doc dir
	* Makefile.am: Here.

	2007-09-28  POTHIER Benoit  <pothier@gostai.com>
	Rename sample projects.
	* sample_projects/liburbi/windows - devcpp/test.cpp: Remove.
	* sample_projects/liburbi/windows - devcpp/test.dev: Remove.
	* sample_projects/liburbi/windows - devcpp: Remove.
	* sample_projects/liburbi/windows - vc++ DLL Multithread MD/test_liburbi.sln: Remove.
	* sample_projects/liburbi/windows - vc++ DLL Multithread MD/test_liburbi.suo: Remove.
	* sample_projects/liburbi/windows - vc++ DLL Multithread MD/test_liburbi/stdafx.cpp: Remove.
	* sample_projects/liburbi/windows - vc++ DLL Multithread MD/test_liburbi/stdafx.h: Remove.
	* sample_projects/liburbi/windows - vc++ DLL Multithread MD/test_liburbi/test.cpp: Remove.
	* sample_projects/liburbi/windows - vc++ DLL Multithread MD/test_liburbi/test_liburbi.vcproj: Remove.
	* sample_projects/liburbi/windows - vc++ DLL Multithread MD/test_liburbi: Remove.
	* sample_projects/liburbi/windows - vc++ DLL Multithread MD: Remove.
	* sample_projects/liburbi/windows - vc++ Multithread MT/test_liburbi.sln: Remove.
	* sample_projects/liburbi/windows - vc++ Multithread MT/test_liburbi.suo: Remove.